Structure/version: fix navbar layout issue
fixes #4653

--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/_navs.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/_navs.scss
@@ -428,9 +428,11 @@
 }
 
 .rex-navbar-without-brand {
-    .container-fluid,
-    .navbar-collapse {
-        padding-left: 0;
+    @media (min-width: $grid-float-breakpoint) {
+        .container-fluid,
+        .navbar-collapse {
+            padding-left: 0;
+        }
     }
 }
 
